src/app/globals.scss
@tailwind base;
@tailwind components;

// Common
* {
    @apply leading-6 box-border;
}

.container {
    @apply mx-auto px-4;
}

.title {
    @apply font-bold text-primary text-xl;
}

.datepicker {
    @apply relative w-full border rounded-md z-[49];

    input {
        @apply cursor-pointer;
    }
}

// Table
.table {
    @apply min-h-80 rounded-md p-3 border shadow-lg;

    &Container {
        @apply w-full h-80 flex flex-col;
    }
}

// Input
.input {
    @apply flex flex-wrap gap-2;

    &-group {
        @apply flex w-full px-3 py-2 border;
        @apply text-sm;
        @apply rounded-md;
        @apply shadow-sm;

        & > input {
            @apply w-full min-h-6;
            @apply bg-transparent font-normal;
            @apply outline-none;
        }
    }
}

// Pagination
.pagination {
    @apply flex flex-wrap items-center max-w-fit h-fit;
    @apply gap-1 py-2.5;

    &-item {
        @apply bg-gray-200 text-black text-tiny;
        @apply transition-all;
        @apply hover:bg-gray-300;
    }

    &-active {
        @apply bg-primary text-white;
        @apply hover:bg-primary;
    }
}

// Table
.cellStickyLeft {
    @apply sticky left-0 min-h-14 flex bg-gray-100 border-r-2 z-50;
}

// Error Message
.errorMessage {
    @apply p-1 text-tiny text-danger;
}

@tailwind utilities;

// Table
.table {
    @apply flex flex-col w-full gap-2;
}

